Receive JSON from The Cat API

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,7 +6,16 @@
     android:layout_height="match_parent"
     tools:context=".MainActivity">
 
+    <!--
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/cats_view"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="@color/black"/>
+    -->
+
     <TextView
+        android:id="@+id/calis"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Hello World!"
