--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -22,7 +22,7 @@
     </androidx.cardview.widget.CardView>
 
     <Button
-        android:id="@+id/next_image"
+        android:id="@+id/next_image_button"
         android:layout_width="200dp"
         android:layout_height="50dp"
         android:layout_gravity="center"
