--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -36,7 +36,7 @@
         android:text="Save"/>
 
     <Button
-        android:id="@+id/my_images"
+        android:id="@+id/my_images_button"
         android:layout_width="200dp"
         android:layout_height="50dp"
         android:layout_gravity="center"
