--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -26,6 +26,7 @@
         android:layout_width="200dp"
         android:layout_height="50dp"
         android:layout_gravity="center"
+        android:layout_marginTop="16dp"
         android:text="Next Image"/>
 
     <Button
@@ -33,6 +34,7 @@
         android:layout_width="200dp"
         android:layout_height="50dp"
         android:layout_gravity="center"
+        android:layout_marginTop="16dp"
         android:text="Save"/>
 
     <Button
@@ -40,6 +42,7 @@
         android:layout_width="200dp"
         android:layout_height="50dp"
         android:layout_gravity="center"
+        android:layout_marginTop="16dp"
         android:text="My Images"/>
     
     <!--
