--- a/app/src/main/res/layout/cat_item.xml
+++ b/app/src/main/res/layout/cat_item.xml
@@ -2,14 +2,15 @@
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:layout_margin="16dp"
+    android:layout_height="200dp"
+    android:layout_margin="8dp"
     app:cardCornerRadius="8dp">
 
     <ImageView
         android:id="@+id/favorite_image_view"
         android:layout_width="match_parent"
-        android:layout_height="200dp"
+        android:layout_height="150dp"
+        android:layout_gravity="center"
         android:src="@mipmap/ic_launcher"/>
 
 </androidx.cardview.widget.CardView>
