--- a/app/src/main/res/layout/activity_my_images.xml
+++ b/app/src/main/res/layout/activity_my_images.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:background="@android:color/darker_gray"
     tools:context=".MyImagesActivity">
 
     <androidx.recyclerview.widget.RecyclerView
