--- a/app/src/main/res/layout/activity_my_images.xml
+++ b/app/src/main/res/layout/activity_my_images.xml
@@ -11,6 +11,9 @@
         android:id="@+id/recycler_view"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginStart="25dp"
+        android:layout_marginEnd="25dp"
+        android:layout_marginTop="15dp"
         android:background="@android:color/darker_gray"/>
 
 </RelativeLayout>
