--- a/app/src/main/res/layout/cat_item.xml
+++ b/app/src/main/res/layout/cat_item.xml
@@ -2,14 +2,14 @@
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="200dp"
-    android:layout_margin="8dp"
+    android:layout_height="100dp"
+    android:layout_margin="5dp"
     app:cardCornerRadius="8dp">
 
     <ImageView
         android:id="@+id/favorite_image_view"
         android:layout_width="match_parent"
-        android:layout_height="125dp"
+        android:layout_height="match_parent"
         android:layout_gravity="center"
         android:src="@mipmap/ic_launcher"/>
 
